<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">action_settings</string>
    <string name="app_name">MatchProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_tab_message">消息</string>
    <string name="text_tab_service">服务</string>
    <string name="text_tab_profile">个人</string>
    <string name="text_tab_setting">设置</string>
    <string name="text_account">201430621223</string>
    <string name="text_notification">通知与消息</string>
    <string name="text_privacy">隐私</string>
    <string name="text_general">通用</string>
    <string name="text_about">关于MatchProject</string>
    <string name="button_backward">返回</string>
    <string name="button_submit">提交</string>
    <string name="text_age">年龄</string>
    <string name="text_gender">性别</string>
    <string name="text_studentId">学号</string>
    <string name="text_headphoto">头像</string>
    <string name="text_nickname">昵称</string>
    <string name="text_email">邮箱</string>
    <string name="text_learning">我想学/考</string>
    <string name="text_education">学历层次</string>
    <string name="text_speciality">专业</string>
    <string name="text_credit">我的积分</string>
    <string name="text_official_website">官方网站</string>
    <string name="text_rate_app">去评分</string>
    <string name="text_about_help">帮助</string>
    <string name="text_about_feedback">反馈</string>
    <string name="text_about_update">检查更新</string>
    <string name="text_company">MatchProject 版权所有 由阳江职院信息工程系提供技术支持</string>
    <string name="text_copyright">Copyright &#169; 2016-2019 YJCollege All Rights Reserved.</string>
    <string name="text_exit">退&#160;出</string>
    <string name="title_activity_guide_page">GuidePageActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="title_activity_forget_password2">ForgetPassword2Activity</string>
    <string name="register_name">注册</string>
    <string name="login_activity_name">登录</string>
    <string name="forgetword_name">忘记密码</string>
    <string name="forgetword2_name">完成修改</string>

    <!-- trade -->
    <string name="sport">二手体育用品</string>
    <string name="life">二手生活用品</string>
    <string name="bicycle">二手车</string>
    <string name="electron">二手电子产品</string>
    <string name="book">二手图书</string>
    <string name="rest">其他二手</string>
    <string name="news">最新二手</string>
    <string name="me">我的二手</string>
    <string name="about">联系我们</string>
    <!-- 异常信息 -->
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="data_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <!-- 下拉刷新 -->
    <string name="drop_dowm">下拉可以刷新</string>
    <string name="release_update">松开可以刷新</string>
    <string name="doing_update">加载中…</string>
    <string name="update_time">更新</string>
    <!-- <string name="update_time">更新于:</string> -->
    <string name="more">更多</string>
    <string name="spinner_hint">请选择</string>

    <!-- 时间友好显示 -->
    <string name="topic_pubtime">1分钟前</string>
    <string name="minutes_before">%1$d分钟前</string>
    <string name="hours_before">%1$d小时前</string>
    <string name="day_before_yesterday">前天 %1$s</string>
    <string name="yesterday">昨天 %1$s</string>
    <string name="days_before">%1$d天前</string>
    <string name="months_before">%1$d个月前</string>
    <string name="years_before">%1$d年前</string>
    <!-- 发布信息 -->
    <string name="tx_releaseTitle">标        题</string>
    <string name="tx_type">类         型</string>
    <string name="tx_releaseTitle_hint">请填写标题</string>
    <string name="tx_releasePrice">价     格</string>
    <string name="tx_releasePrice_hint">请填写价格</string>
    <string name="tx_describe">描         述</string>
    <string name="tx_describe_hint">请填写描述</string>
    <string name="tx_linkMan">联   系  人</string>
    <string name="tx_linkMan_hint">请填写联系人</string>
    <string name="tx_link">联系电话</string>
    <string name="tx_link_hint">请填写联系电话</string>
    <string name="release">发布</string>
    <string name="choose_pic">选择照片来源</string>
    <string name="gallery">相册</string>
    <string name="camera">相机</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="all">全部</string>
    <string name="school">本校</string>
    <string name="describe">详细信息:</string>
    <string name="info_bottom_title">联系我时，请说在校园淘网站上看到的，谢谢！</string>
    <string name="create_time">发布日期:</string>
    <string name="price_title">价        格:</string>
    <string name="item_type">类        型:</string>
    <string name="location_title">位        置:</string>
    <string name="trade_main_activityname">二手市场</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="fourth_fragment_name">设置</string>
    <string name="hopeSell">求购信息</string>
    <string name="collect_btn">收藏</string>
    <string name="sending_request">正在发送请求</string>
    <string name="modification_activity_completed">完成</string>

    <string name="secondhand_sport">二手体育用品</string>
    <string name="secondhand_life">二手生活用品</string>
    <string name="secondhand_bike">二手自行车</string>
    <string name="secondhand_technology">二手电子产品</string>
    <string name="secondhand_book">二手图书</string>
    <string name="secondhand_office">二手办公用品</string>
    <string name="secondhand_computer">二手电脑配件</string>
    <string name="secondhand_person">个人中心</string>
    <string-array name="secondhand_gridview_text">
        <item>@string/secondhand_sport</item>
        <item>@string/secondhand_life</item>
        <item>@string/secondhand_bike</item>
        <item>@string/secondhand_technology</item>
        <item>@string/secondhand_book</item>
        <item>@string/secondhand_office</item>
        <item>@string/secondhand_computer</item>
        <item>@string/secondhand_person</item>
    </string-array>
</resources>
