<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/trade_activity_title" />
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tx_title"
                    style="@style/InfoTitleText"
                    android:text="" />
            </LinearLayout>

            <TextView style="@style/SeparatorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InfoLeftText"
                    android:text="@string/create_time" />

                <TextView
                    android:id="@+id/tx_createTime"
                    style="@style/InfoRightText"
                    android:text="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InfoLeftText"
                    android:text="@string/item_type" />

                <TextView
                    android:id="@+id/tx_itemType"
                    style="@style/InfoRightText"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InfoLeftText"
                    android:text="@string/location_title" />

                <TextView
                    android:id="@+id/tx_location"
                    style="@style/InfoRightText"
                    android:text="" />
            </LinearLayout>

            <TextView style="@style/SeparatorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/InfoLeftText"
                    android:text="@string/describe" />

                <TextView
                    android:id="@id/tx_describe"
                    style="@style/InfoRightText"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30.0dip"
                    android:layout_marginRight="10.0dip"
                    android:gravity="left"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/InfoRightText"
                    android:gravity="left"
                    android:text="@string/info_bottom_title" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/trade_info_bottom" />

</LinearLayout>