<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20.0dip"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_main_color"
        android:paddingLeft="10.0dip"
        android:paddingTop="10.0dip" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/trade_dialog_info"
            android:drawablePadding="10.0dip"
            android:textColor="@color/black"
            android:text="@string/choose_pic"
            android:textSize="20.0sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:maxLines="8"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/trade_home_bg"
            android:drawablePadding="10.0dip"
            android:drawableTop="@drawable/trade_gallery_src"
            android:gravity="center"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="16.0sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/trade_home_bg"
            android:drawablePadding="10.0dip"
            android:drawableTop="@drawable/trade_camera_src"
            android:gravity="center"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="16.0sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<Button
            android:id="@+id/button_ok"
            style="@style/BigButton"
            android:layout_margin="20.0dip"
            android:layout_weight="1.0"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:visibility="gone" />
        <Button
            android:id="@+id/button_cancel"
            style="@style/BigButton"
            android:layout_margin="20.0dip"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:visibility="gone" />
        
    </LinearLayout>

</LinearLayout>